# meatie

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  TYPE_ERASURE_FIX.md  TYPE_HINTS_IMPROVEMENTS.md  mkdocs.yml  pyproject.toml  todo
.github/: dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-branch.yaml  ci.yaml  lint.yaml  release-git-tag.yaml  release-package.yaml  test-matrix.yaml  test.yaml  upload-code-coverage.yaml
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  cookbook.md  getting_started.md  index.md  references.md  requirements.txt  tutorial.md
docs/api_reference/: all_references.md
docs/tutorials/: authentication.md  caching.md  getting_started.md  rate_limiter.md  shared_config.md
src/meatie/: __init__.py  api_ref.py  api_reference.py  client.py  descriptor.py  endpoint.py  error.py  formatter.py  request_template.py  types.py
src/meatie/adapter/: bytes_.py  pydantic_v2.py
src/meatie/adapter/aio/: json_.py  none_.py  pydantic_v1.py  pydantic_v2.py  string_.py
src/meatie/aio/: __init__.py  client.py  descriptor.py  endpoint.py  endpoint_descriptor.py  request_template.py  response.py  types.py
src/meatie/aio/adapter/: __init__.py  bytes_.py  client_response.py  factory.py  json_.py  none_.py  pydantic_v1.py  pydantic_v2.py  string_.py  types.py
src/meatie/aio/internal/: __init__.py  adapter.py  endpoint_descriptor.py  pydantic_v1.py  pydantic_v2.py  request_template.py
src/meatie/aio/option/: __init__.py  cache.py  cache_option.py  limit.py  limit_option.py  private.py  private_option.py  retry.py  retry_option.py
src/meatie/internal/: __init__.py  cache.py  error.py  http.py  number.py  types.py
src/meatie/internal/adapter/: __init__.py  bytes_.py  client_response.py  factory.py  json_.py  none_.py  pydantic_v1.py  pydantic_v2.py  string_.py  types.py
src/meatie/internal/limit/: __init__.py  limiter.py  rate.py  reservation.py
src/meatie/internal/retry/: __init__.py  condition.py  context.py  retry.py  stop.py  wait.py
src/meatie/internal/template/: __init__.py  method.py  parameter.py  path.py  request.py  unwrap.py
src/meatie/internal/time_/: __init__.py  duration.py  types.py
src/meatie/option/: __init__.py  body_option.py  cache.py  cache_option.py  limit.py  limit_option.py  private.py  private_option.py  retry.py  retry_option.py
src/meatie_aiohttp/: __init__.py  client.py  response.py
src/meatie_httpx/: __init__.py  async_client.py  async_response.py  client.py  response.py
src/meatie_requests/: __init__.py  client.py  response.py
tests/: conftest.py  test_descriptor.py  test_request_template.py  test_type_hints.py
tests/acceptance/: test_binance.py
tests/adapter/: test_client_response.py  test_get_adapter.py
tests/adapter/pydantic_integration/: test_adapter.py
tests/aio/: conftest.py  test_adapter.py  test_descriptor.py  test_endpoint_descriptor.py
tests/aio/internal/: test_endpoint_descriptor.py  test_request_template.py
tests/aio/internal/adapter/: conftest.py  test_bytes.py  test_client_response.py  test_json.py  test_pydantic.py  test_string.py
tests/aio/option/: test_cache.py  test_limit.py  test_private.py  test_retry.py
tests/aio/pydantic_integration/: conftest.py  test_adapter.py  test_example.py
tests/client/: conftest.py  default_suite.py  proxy_suite.py  test_base_client.py  test_client.py  timeout_suite.py
tests/client/aiohttp/: conftest.py  test_array_query_params.py  test_client.py  test_default.py  test_descriptor.py  test_error.py  test_example.py  test_fmt_future_annotations.py  test_proxy.py  test_timeout.py
tests/client/aiohttp/adapter/: test_bytes.py  test_json.py  test_pydantic.py  test_pydantic_v2.py  test_string.py
tests/client/aiohttp/option/: test_cache.py  test_limit.py  test_private.py  test_retry.py
tests/client/aiohttp_/: conftest.py  mock_tools.py  test_default.py  test_descriptor.py  test_example.py  test_proxy.py  test_timeout.py
tests/client/aiohttp_/adapter/: test_bytes.py  test_json.py  test_pydantic.py  test_string.py
tests/client/aiohttp_/option/: test_cache.py  test_limit.py  test_private.py  test_retry.py
tests/client/httpx/: conftest.py  test_array_query_params.py  test_client.py  test_default.py  test_descriptor.py  test_error.py  test_proxy.py  test_timeout.py
tests/client/httpx/adapter/: test_json.py  test_pydantic_v2.py
tests/client/httpx/async/: test_default.py  test_proxy.py  test_timeout.py
tests/client/httpx/option/: test_cache.py  test_limit.py  test_private.py  test_retry.py
tests/client/httpx_/: conftest.py  mock_tools.py  test_default.py  test_descriptor.py  test_proxy.py  test_timeout.py
tests/client/requests/: conftest.py  test_array_query_params.py  test_client.py  test_default.py  test_descriptor.py  test_error.py  test_proxy.py  test_timeout.py
tests/client/requests_/: conftest.py  test_default.py  test_descriptor.py  test_proxy.py  test_timeout.py
tests/e2e/: conftest.py  test_bytes.py  test_example.py  test_json.py  test_pydantic.py  test_string.py
tests/examples/: test_wrap_client.py
tests/examples/aiohttp/: conftest.py  test_pydantic_query.py  test_wrap_client.py
tests/examples/httpx/: conftest.py
tests/examples/requests/: conftest.py
tests/internal/: test_cache.py
tests/internal/adapter/: test_client_response.py  test_get_adapter.py
tests/internal/limit/: test_limiter.py
tests/internal/retry/: test_wait.py
tests/internal/template/: test_path_template.py
tests/option/: test_cache.py  test_limit.py  test_private.py  test_retry.py  test_retry_option.py
tests/shared/http_test/: __init__.py  async_adapter.py  handlers.py  http_server.py
tests/shared/mock_tools/: __init__.py  aiohttp_mock_tools.py  httpx_mock_tools.py  requests_mock_tools.py
tests/tools/http_test/: __init__.py  async_adapter.py  http_server.py
tests/transport/: conftest.py  test_async_client.py  test_client.py  test_event_loop.py
(+49 files in other folders)
