[tool.poetry]
name = "meatie"
version = "0.1.7"
description = "Meatie is a Python typed REST client library that eliminates the need for boilerplate code when integrating with external APIs. The library generates code for calling a REST API based on method signatures annotated with type hints. Meatie abstracts away mechanics related to HTTP communication, such as building URLs, encoding query parameters, parsing, and dumping Pydantic models. With some modest additional configuration effort, generated HTTP clients offer rate limiting, retries, and caching."
authors = ["pmateusz <pmateusz@users.noreply.github.com>"]
readme = "README.md"
keywords = ["http-client", "api-client", "REST", "HTTP", "API", "requests", "httpx", "aiohttp", "pydantic", "asyncio", "type-hints"]
homepage = "https://github.com/pmateusz/meatie"
repository = "https://github.com/pmateusz/meatie"
license = "BSD-3-Clause"
include = ["pyproject.toml", "README.md", "LICENSE.md", "CHANGELOG.md"]
packages = [
    { include = "meatie", from = "src" },
    { include = "meatie_aiohttp", from = "src" },
    { include = "meatie_httpx", from = "src" },
    { include = "meatie_requests", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9"
typing-extensions = ">=4.7.0"

[tool.poetry.group.requests]
optional = true

[tool.poetry.group.requests.dependencies]
requests = ">=2.26.0"

[tool.poetry.group.httpx]
optional = true

[tool.poetry.group.httpx.dependencies]
httpx = ">=0.19.0"

[tool.poetry.group.aiohttp]
optional = true

[tool.poetry.group.aiohttp.dependencies]
aiohttp = ">=3.7.0"

[tool.poetry.group.test.dependencies]
coverage = ">=7.4.0"
pytest = ">=7.4.3"
pytest-asyncio = ">=0.23.2"
cryptography = ">=42.0.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.0"

[tool.poetry.group.pydantic]
optional = true

[tool.poetry.group.pydantic.dependencies]
pydantic = ">=1.10.0"

[tool.pytest.ini_options]
log_cli = true
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["src", "tests/shared"]
addopts = ["--import-mode=importlib"]


[tool.mypy]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/src", "$MYPY_CONFIG_FILE_DIR/tests/shared"]
cache_dir = "./.mypy"
pretty = true
allow_empty_bodies = true
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
explicit_package_bases = true
local_partial_types = true
no_warn_no_return = true
no_implicit_reexport = true
show_error_context = true
strict_equality = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.ruff]
fix = true
line-length = 120
cache-dir = ".ruff"
extend-select = ["I"]

[tool.ruff.lint]
preview = true
extend-select = ["CPY001", "D"]
ignore = ["D100","D105"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)Copyright \\d{4} The Meatie Authors. All rights reserved.\\n#  Use of this source code is governed by a BSD-style license that can be found in the LICENSE file.\\n"
min-file-size = 1024

[tool.ruff.per-file-ignores]
"src/meatie/aio/**" = ["D"]
"src/meatie/api_reference.py" = ["D"]
"src/meatie/client.py" = ["D"]
"src/meatie/descriptor.py" = ["D"]
"src/meatie/endpoint.py" = ["D"]
"src/meatie/error.py" = ["D"]
"src/meatie/types.py" = ["D"]
"src/meatie/option/**" = ["D"]
"src/meatie/internal/types.py" = ["D"]
"src/meatie/internal/retry/**" = ["D"]
"src/meatie/internal/limit/**" = ["D"]
"src/meatie/internal/cache.py" = ["D"]
"src/meatie/internal/adapter/**" = ["D"]
"src/meatie/internal/error/**" = ["D"]
"src/meatie_httpx/**" = ["D"]
"src/meatie_requests/**" = ["D"]
"src/meatie_aiohttp/**" = ["D"]
"tests/**" = ["D"]
"test_*.py" = ["D"]

[tool.coverage.run]
branch = true
omit = ["src/meatie/aio/internal/adapter/pydantic_v1.py", "tests/*"]

[tool.coverage.report]
exclude_also = [
    "class .*\\bProtocol\\):",
    "\\.\\.\\."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
