[project]
name = "meatie"
dynamic = ["version"]
description = "Meatie is a Python typed REST client library that eliminates the need for boilerplate code when integrating with external APIs. The library generates code for calling a REST API based on method signatures annotated with type hints. Meatie abstracts away mechanics related to HTTP communication, such as building URLs, encoding query parameters, parsing, and dumping Pydantic models. With some modest additional configuration effort, generated HTTP clients offer rate limiting, retries, and caching."
readme = "README.md"
keywords = [
  "aiohttp",
  "API",
  "api-client",
  "asyncio",
  "HTTP",
  "http-client",
  "httpx",
  "pydantic",
  "requests",
  "REST",
  "type-hints",
]
license = "BSD-3-Clause"
license-files = [ "LICENSE.md" ]
authors = [ { name = "pmateusz", email = "pmateusz@users.noreply.github.com" } ]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
repository = "https://github.com/pmateusz/meatie"
dependencies = [
    "typing-extensions>=4.7.0"
]

[project.optional-dependencies]
aiohttp = [ "aiohttp>=3.7" ]
httpx = [ "httpx>=0.19" ]
pydantic = [ "pydantic>=1.10" ]
requests = [ "requests>=2.26" ]

[dependency-groups]
docs = [
    "mkdocs>=1.2",
    "mkdocs-material>=7.1",
    "mkdocstrings>=0.28",
    "mkdocstrings-python>=1.14.5",
]
test = [
    "cryptography>=42.0.2",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=6.0.0",
    "pytest-xdist[psutil]>=3.6.1",
]
mypy = [
    "pip",
    "mypy>=1.11",
    "types-setuptools",
    "types-requests",
    "types-docutils",
    "types-Pygments"
]

[tool.uv]
managed = true
package = true
default-groups = [ "test" ]

[tool.hatch.version]
path = "src/meatie/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/meatie", "src/meatie_aiohttp", "src/meatie_requests", "src/meatie_httpx", "meatie", "meatie_aiohttp", "meatie_requests", "meatie_httpx"]
# `uv run` requires ["src/meatie", "src/meatie_aiohttp", "src/meatie_requests", "src/meatie_httpx"]
# `uv build` requires ["meatie", "meatie_aiohttp", "meatie_requests", "meatie_httpx"]

[tool.hatch.build.targets.sdist]
packages = ["src/meatie", "src/meatie_aiohttp", "src/meatie_requests", "src/meatie_httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
fix = true
cache-dir = ".ruff"

[tool.ruff.lint]
preview = true
extend-select = [ "CPY001", "D", "I" ]
ignore = [ "D100", "D105" ]
per-file-ignores."src/meatie/internal/adapter/**" = [ "D" ]
per-file-ignores."src/meatie/internal/cache.py" = [ "D" ]
per-file-ignores."src/meatie/internal/limit/**" = [ "D" ]
per-file-ignores."src/meatie/internal/retry/**" = [ "D" ]
per-file-ignores."src/meatie_aiohttp/**" = [ "D" ]
per-file-ignores."src/meatie_httpx/**" = [ "D" ]
per-file-ignores."src/meatie_requests/**" = [ "D" ]
per-file-ignores."test_*.py" = [ "D" ]
per-file-ignores."tests/**" = [ "D" ]
flake8-copyright.min-file-size = 1024
flake8-copyright.notice-rgx = "(?i)Copyright \\d{4} The Meatie Authors. All rights reserved.[\\r\\n]+#  Use of this source code is governed by a BSD-style license that can be found in the LICENSE file.[\\r\\n]*"
pydocstyle.convention = "google"

[tool.pytest.ini_options]
log_cli = true
asyncio_default_fixture_loop_scope = "session"
pythonpath = [ "src", "tests/shared" ]
addopts = [
    "--import-mode=importlib",
    "-nauto",  # Automatically run tests in parallel, disable by running `pytest -n 1`
]

[tool.mypy]
mypy_path = [ "$MYPY_CONFIG_FILE_DIR/src", "$MYPY_CONFIG_FILE_DIR/tests/shared" ]
cache_dir = "./.mypy"
pretty = true
allow_empty_bodies = true
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
explicit_package_bases = true
local_partial_types = true
no_warn_no_return = true
no_implicit_reexport = true
show_error_context = true
strict_equality = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
